--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
-    <title>Deaden</title>
+    <title>Aviva</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto+Flex:wght@300;400;500&display=swap" rel="stylesheet">
@@ -19,7 +19,8 @@
         <img id="logo" src="https://cdn.discordapp.com/attachments/852630522462732368/1112172492765810718/icons8-drama-50.png" class="logo a-b">
         <div class="sections a-b">
           <ul class="a-b">
-            <li class="a-b"><a id="y" href="leak.html" class="a-b">Home</a></li>
+            <li class="a-b"><a id="y" href="index.html" class="a-b">Home</a></li>
+            <li class="a-b"><a id="y" href="projects.html" class="a-b">Releases</a></li>
           </ul>
         </div>
       </div>
