--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <section class="heroo">
 
         <div class="container">
-            <h1>Deaden</h1>
-            <h4>Deaden#7342</h4>
+            <h1>Aviva</h1>
+            <h4>Aviva#7342</h4>
             <span id="glowy" class="Paragraph"></span> 
         </div>
         <div class="container2"></div>
